fix: update spacing

--- a/packages/core/src/components/toggle/toggle.scss
+++ b/packages/core/src/components/toggle/toggle.scss
@@ -48,7 +48,7 @@
     min-width: 3rem;
     max-width: 3rem;
     height: 1.5rem;
-    margin-right: 0.125rem;
+    margin-block: 0.125rem;
   }
 
   .slider {
